--- a/Project/src/main/webapp/index.html
+++ b/Project/src/main/webapp/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>BEST HOSPITAL EUNE</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="mainpage/main.css">
     </head>
+    <nav>
+
+        <a href="#">Shift</a>
+        <a href="#">Login</a>
+        <a href="#">Register</a>
+
+    </nav>
     <body>
-        <h1>Hello World!</h1>
+        <h1>The <span>Best</span>   Hospital.</h1>
     </body>
+    <script src="mainpage/main.js"></script>
 </html>
