--- a/Project/src/main/webapp/index.html
+++ b/Project/src/main/webapp/index.html
@@ -5,11 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="mainpage/main.css">
     </head>
-    <nav>
-
-        <a href="#">Shift</a>
-        <a href="#">Login</a>
-        <a href="#">Register</a>
+    <nav id="navbar">
 
     </nav>
     <body>
