Finished profiles, initializing servlets

--- a/Project/src/main/webapp/profiles/patient/pat.html
+++ b/Project/src/main/webapp/profiles/patient/pat.html
@@ -6,13 +6,20 @@
 
         <title>BEST HOSPITAL EUNE</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="mainpage/main.css">
+        <link rel="stylesheet" href="./pat.css">
     </head>
-    <nav id="navbar">
+    <nav>
 
     </nav>
+    <br><br><br>
     <body>
-        <h1>The <span>Best</span>   Hospital </h1>
+        <div class="container">
+          <h2>My Info</h2>
+
+          <div class="my-info">
+
+          </div>
+        </div>
     </body>
-    <script src="mainpage/main.js"></script>
+    <script src="./pat.js"></script>
 </html>
