--- a/Project/src/main/webapp/profiles/asman/asman.html
+++ b/Project/src/main/webapp/profiles/asman/asman.html
@@ -8,12 +8,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="./asman.css">
     </head>
-    <nav>
+    <nav id="nav">
 
     </nav>
     <body>
         <h1> Find a patient </h1>
-        <input type="text" id="patient" name="patient" value="" placeholder="Patient's ID">
+        <input type="text" id="patient" name="patient" value="" placeholder="Patient's Username">
         <button type="button" id="submit" name="button"><i class="fas fa-user-injured"></i>Find Patient</button>
         <br><br><br>
         <div class="container">
@@ -31,7 +31,7 @@
 
         </div><br><br><br>
         <h1> Find a Doctor </h1>
-        <input type="text" id="doctor" name="doctor" value="" placeholder="Doctor's ID">
+        <input type="text" id="doctor" name="doctor" value="" placeholder="Doctor's Username">
         <button type="button" id="submit" name="button"><i class="fas fa-user-md"></i>Find Doctor</button>
         <br><br><br>
         <div class="container">
@@ -49,7 +49,7 @@
 
         </div><br><br><br>
         <h1> Find a Nurse </h1>
-        <input type="text" id="nurse" name="nurse" value="" placeholder="Nurse's ID">
+        <input type="text" id="nurse" name="nurse" value="" placeholder="Nurse's Username">
         <button type="button" id="submit" name="button"><i class="fas fa-user-md"></i>Find Nurse</button>
         <br><br><br>
         <div class="container">
