--- a/Project/src/main/webapp/profiles/patient/pat.html
+++ b/Project/src/main/webapp/profiles/patient/pat.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="./pat.css">
     </head>
-    <nav>
+    <nav id="nav">
 
     </nav>
     <br><br><br>
@@ -19,7 +19,10 @@
           <div class="my-info">
 
           </div>
-        </div>
+        </div><br><br><br><br><br><br>
+          <h2>Make a visit</h2><br>
+          <input type="text" id="date" name="DATE" value="" placeholder="YYYY-MM-DD">
+          <button type="button" id="make-visit" name="button">Make a visit</button> <br><br><br>
     </body>
     <script src="./pat.js"></script>
 </html>
