--- a/Project/src/main/webapp/profiles/doctor/doctor.html
+++ b/Project/src/main/webapp/profiles/doctor/doctor.html
@@ -8,20 +8,19 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="./doctor.css">
     </head>
-    <nav>
+    <nav id="nav">
 
     </nav>
     <body>
         <h1> Find a patient </h1>
-        <input type="text" id="patient" name="patient" value="" placeholder="Patient's ID">
+        <input type="text" id="patient" name="patient" value="" placeholder="Patient's Username">
         <button type="button" id="submit" name="button"><i class="fas fa-user-injured"></i>Find Patient</button>
         <br><br><br>
         <div class="container">
             <h2>Patient's Info</h2><br>
-            <div class="pat-info">
+            <div class="pat-info" id="pat-info">
 
             </div>
-            <button type="button" id="sumbit" name="button">Save Changes</button>
             <!--<input type="text" name="date" value="" placeholder="Date"> <br><br>
             <input type="text" name="State" value="" placeholder="State"><br><br>
             <input type="text" name="cure" value="" placeholder="Cure"> <br><br>
@@ -30,6 +29,24 @@
 
 
         </div><br><br><br>
+        <div class="container">
+            <h2>Update Patient's Info</h2><br>
+            <div class="pat-info" id="pat-info">
+              <input type="text" name="patient" value="" placeholder="Patient"><br><br><br><br><br>
+              <input type="text" name="date" value="" placeholder="YYYY-MM-DD"><br><br><br><br><br>
+              <input type="text" name="cure" value="" placeholder="Cure"><br><br><br><br><br>
+              <input type="text" name="state" value="" placeholder="State"><br><br><br><br><br>
+              <button type="button" id="sumbit" name="button">Update Visit</button>
+            </div>
+            <!--<input type="text" name="date" value="" placeholder="Date"> <br><br>
+            <input type="text" name="State" value="" placeholder="State"><br><br>
+            <input type="text" name="cure" value="" placeholder="Cure"> <br><br>
+            <input type="text" name="doctor_id" value="" placeholder="Doctor"><br><br>
+            <input type="text" name="nurse_id" value="" placeholder="Nurse"> <br><br>-->
+
+
+        </div><br><br><br>
+
         <div class="container">
           <h2>My Info</h2>
 
