--- a/Project/src/main/webapp/profiles/doctor/doctor.html
+++ b/Project/src/main/webapp/profiles/doctor/doctor.html
@@ -34,11 +34,11 @@
         <div class="container">
             <h2>Update Patient's Info</h2><br>
             <div class="pat-info" id="pat-info">
-              <input type="text" name="patient" value="" placeholder="Patient"><br><br><br><br><br>
-              <input type="text" name="date" value="" placeholder="YYYY-MM-DD"><br><br><br><br><br>
-              <input type="text" name="cure" value="" placeholder="Cure"><br><br><br><br><br>
-              <input type="text" name="state" value="" placeholder="State"><br><br><br><br><br>
-              <button type="button" id="sumbit-visit" name="button">Update Visit</button>
+              <input type="text" id="pat_id" name="patient" value="" placeholder="Patient"><br><br><br><br><br>
+              <input type="text" id="pat_date" name="date" value="" placeholder="YYYY-MM-DD"><br><br><br><br><br>
+              <input type="text" id="pat_cure" name="cure" value="" placeholder="Cure"><br><br><br><br><br>
+              <input type="text" id="pat_state" name="state" value="" placeholder="State"><br><br><br><br><br>
+              <button type="button" id="submit-visit" name="button">Update Visit</button>
             </div>
             <!--<input type="text" name="date" value="" placeholder="Date"> <br><br>
             <input type="text" name="State" value="" placeholder="State"><br><br>
