--- a/Project/src/main/webapp/index.html
+++ b/Project/src/main/webapp/index.html
@@ -13,6 +13,9 @@
     </nav>
     <body>
         <h1>The <span>Best</span>   Hospital </h1>
+        <textarea name="sql" rows="8" cols="80" id="query" placeholder="Type in SQL queries"></textarea><br><br>
+        <button type="button" id="sql-submit" name="sql-submit">Send Query</button>
     </body>
+
     <script src="mainpage/main.js"></script>
 </html>
