--- a/Project/src/main/webapp/profiles/patient/pat.html
+++ b/Project/src/main/webapp/profiles/patient/pat.html
@@ -31,7 +31,7 @@
           </div>
         </div><br><br><br><br><br><br>
           <h2>Make a visit</h2><br>
-          <input type="text" id="date" name="DATE" value="" placeholder="YYYY-MM-DD"><br><br><br>
+          <input type="text" id="date" name="DATE" value="" placeholder="YYYY-MM-DD HH:MM:SS"><br><br><br>
           <textarea name="symptoms" id="symptoms" rows="8" cols="80" placeholder="Symptoms separated by comma ','"></textarea><br><br><br>
           <button type="button" id="make-visit" name="button">Make a visit</button> <br><br><br>
     </body>
