--- a/Project/src/main/webapp/profiles/doctor/doctor.html
+++ b/Project/src/main/webapp/profiles/doctor/doctor.html
@@ -35,7 +35,7 @@
             <h2>Update Patient's Info</h2><br>
             <div class="pat-info" id="pat-info">
               <input type="text" id="pat_id" name="patient" value="" placeholder="Patient"><br><br><br><br><br>
-              <input type="text" id="pat_date" name="date" value="" placeholder="YYYY-MM-DD"><br><br><br><br><br>
+              <input type="text" id="pat_date" name="date" value="" placeholder="YYYY-MM-DD HH:MM:SS"><br><br><br><br><br>
               <input type="text" id="pat_cure" name="cure" value="" placeholder="Cure"><br><br><br><br><br>
               <input type="text" id="pat_state" name="state" value="" placeholder="State"><br><br><br><br><br>
               <button type="button" id="submit-visit" name="button">Update Visit</button>
